fix: title overflow

--- a/client/src/app/[username]/[articleId]/ArticlePage.module.scss
+++ b/client/src/app/[username]/[articleId]/ArticlePage.module.scss
@@ -6,6 +6,8 @@
 .title {
   font-size: 3rem;
   margin: 2rem 0;
+  inline-size: 100%;
+  overflow-wrap: break-word;
 }
 
 .content {
